marketing/products/zenith/deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zenith
  labels:
    nafura.io/app: zenith
    nafura.io/layer: marketing
