marketing/products/zenith/deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zenith-web
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: zenith-web
